@@ -1,16 +1,16 @@
 // Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.application
 
+import com.intellij.diagnostic.VMOptions
 import com.intellij.ide.plugins.PluginBuilder
-import com.intellij.ide.plugins.marketplace.MarketplaceRequests
 import com.intellij.ide.startup.StartupActionScriptManager
 import com.intellij.ide.util.PropertiesComponent
 import com.intellij.openapi.components.stateStore
 import com.intellij.openapi.diagnostic.logger
 import com.intellij.openapi.extensions.PluginId
-import com.intellij.openapi.progress.ProgressIndicator
 import com.intellij.openapi.util.BuildNumber
 import com.intellij.openapi.util.SystemInfo
+import com.intellij.openapi.util.ThrowableNotNullBiFunction
 import com.intellij.testFramework.PlatformTestUtil.useAppConfigDir
 import com.intellij.util.io.isDirectory
 import kotlinx.coroutines.runBlocking
@@ -18,17 +18,14 @@ import org.assertj.core.api.Assertions.assertThat
 import org.assertj.core.api.Condition
 import org.junit.Assume.assumeTrue
 import org.junit.Test
-import java.io.File
 import java.io.IOException
 import java.nio.charset.StandardCharsets
 import java.nio.file.Files
-import java.nio.file.Path
 import java.util.function.Predicate
 
 private val LOG = logger<ConfigImportHelperTest>()
 
 class ConfigImportHelperTest : ConfigImportHelperBaseTest() {
-
   @Test fun `config directory is valid for import`() {
     PropertiesComponent.getInstance().setValue("property.ConfigImportHelperTest", true)
     try {
@@ -160,14 +157,14 @@ class ConfigImportHelperTest : ConfigImportHelperBaseTest() {
     val options = ConfigImportHelper.ConfigImportOptions(LOG)
     options.headless = true
     options.compatibleBuildNumber = BuildNumber.fromString("201.1")
-    options.marketplaceRequests = object : MarketplaceRequests() {
-      override fun download(pluginUrl: String, indicator: ProgressIndicator): File {
-        val path = localTempDir.newDirectory("pluginTemp").toPath().resolve("my-plugin-new.jar")
-        PluginBuilder()
-          .id(oldBuilder.id)
-          .buildJar(path)
-        return path.toFile()
-      }
+    options.downloadFunction = ThrowableNotNullBiFunction { _, _ ->
+      val path = localTempDir.newDirectory("pluginTemp")
+        .toPath()
+        .resolve("my-plugin-new.jar")
+      PluginBuilder()
+        .id(oldBuilder.id)
+        .buildJar(path)
+      path.toFile()
     }
     ConfigImportHelper.doImport(oldConfigDir, newConfigDir, null, oldPluginsDir, newPluginsDir, options)
     assertThat(newPluginsDir).isDirectoryContaining { it.fileName.toString() == "my-plugin-new.jar" }
@@ -186,11 +183,7 @@ class ConfigImportHelperTest : ConfigImportHelperBaseTest() {
     val options = ConfigImportHelper.ConfigImportOptions(LOG)
     options.headless = true
     options.compatibleBuildNumber = BuildNumber.fromString("201.1")
-    options.marketplaceRequests = object : MarketplaceRequests() {
-      override fun download(pluginUrl: String, indicator: ProgressIndicator): File {
-        throw IOException("404")
-      }
-    }
+    options.downloadFunction = ThrowableNotNullBiFunction { _, _ -> throw IOException("404") }
     ConfigImportHelper.doImport(oldConfigDir, newConfigDir, null, oldPluginsDir, newPluginsDir, options)
     assertThat(newPluginsDir).isDirectoryContaining { it.fileName.toString() == "my-plugin.jar" }
   }
@@ -289,11 +282,7 @@ class ConfigImportHelperTest : ConfigImportHelperBaseTest() {
     val options = ConfigImportHelper.ConfigImportOptions(LOG)
     options.headless = true
     options.compatibleBuildNumber = BuildNumber.fromString("201.1")
-    options.marketplaceRequests = object : MarketplaceRequests() {
-      override fun download(pluginUrl: String, indicator: ProgressIndicator): File {
-        throw AssertionError("No file download should be requested")
-      }
-    }
+    options.downloadFunction = ThrowableNotNullBiFunction { _, _ -> throw AssertionError("No file download should be requested") }
     ConfigImportHelper.doImport(oldConfigDir, newConfigDir, null, oldPluginsDir, newPluginsDir, options)
     assertThat(newPluginsDir)
       .isDirectoryContaining { it.fileName.toString() == "my-plugin-1.1.jar" }
@@ -330,7 +319,6 @@ class ConfigImportHelperTest : ConfigImportHelperBaseTest() {
       .isDirectoryNotContaining { it.fileName.toString() == "my-plugin-1.0.jar" }
   }
 
-
   @Test fun `do not migrate plugins to existing directory`() {
     val oldConfigDir = localTempDir.newDirectory("oldConfig").toPath()
     val oldPluginsDir = Files.createDirectories(oldConfigDir.resolve("plugins"))
@@ -347,5 +335,18 @@ class ConfigImportHelperTest : ConfigImportHelperBaseTest() {
     assertThat(newPluginsDir)
       .isDirectoryContaining { it.fileName == newPluginZip.fileName }
       .isDirectoryNotContaining { it.fileName == oldPluginZip.fileName }
+  }
+
+  @Test fun `filtering custom VM options`() {
+    val oldConfigDir = localTempDir.newDirectory("oldConfig").toPath()
+    Files.write(oldConfigDir.resolve(VMOptions.getCustomVMOptionsFileName()),
+                listOf("-XX:MaxJavaStackTraceDepth=-1", "-Xverify:none", "-noverify", "-agentlib:yjpagent=opts", "-agentpath:/path/to/lib-yjpagent.so=opts"))
+    val newConfigDir = localTempDir.newDirectory("newConfig").toPath()
+
+    val options = ConfigImportHelper.ConfigImportOptions(LOG)
+    options.headless = true
+    ConfigImportHelper.doImport(oldConfigDir, newConfigDir, null, oldConfigDir.resolve("plugins"), newConfigDir.resolve("plugins"), options)
+
+    assertThat(newConfigDir.resolve(VMOptions.getCustomVMOptionsFileName())).hasContent("-XX:MaxJavaStackTraceDepth=10000")
   }
 }
