@@ -1,4 +1,4 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.idea.devkit.run;
 
 import com.intellij.diagnostic.logging.LogConfigurationPanel;
@@ -10,6 +10,7 @@ import com.intellij.execution.configurations.*;
 import com.intellij.execution.runners.ExecutionEnvironment;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.JetBrainsProtocolHandler;
+import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.ModuleManager;
@@ -28,7 +29,6 @@ import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.psi.xml.XmlFile;
 import com.intellij.util.PlatformUtils;
 import org.jdom.Element;
-import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.idea.devkit.DevKitBundle;
@@ -42,49 +42,49 @@ import org.jetbrains.idea.devkit.util.PsiUtil;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 
+import static com.intellij.idea.LoggerFactory.LOG_FILE_NAME;
 import static com.intellij.openapi.util.io.FileUtil.toSystemDependentName;
 
 public class PluginRunConfiguration extends RunConfigurationBase<Element> implements ModuleRunConfiguration {
-  private static final String IDEA_LOG = "idea.log";
+  private static final String NAME = "name";
+  private static final String MODULE = "module";
+  private static final String ALTERNATIVE_PATH_ELEMENT = "alternative-path";
+  private static final String PATH = "path";
+  private static final String ALTERNATIVE_PATH_ENABLED_ATTR = "alternative-path-enabled";
+
   private Module myModule;
   private String myModuleName;
 
   public String VM_PARAMETERS;
   public String PROGRAM_PARAMETERS;
-  @NonNls private static final String NAME = "name";
-  @NonNls private static final String MODULE = "module";
-  @NonNls private static final String ALTERNATIVE_PATH_ELEMENT = "alternative-path";
-  @NonNls private static final String PATH = "path";
-  @NonNls private static final String ALTERNATIVE_PATH_ENABLED_ATTR = "alternative-path-enabled";
+
   private String ALTERNATIVE_JRE_PATH = null;
   private boolean ALTERNATIVE_JRE_PATH_ENABLED = false;
 
-  public PluginRunConfiguration(final Project project, final ConfigurationFactory factory, final String name) {
+  public PluginRunConfiguration(Project project, ConfigurationFactory factory, String name) {
     super(project, factory, name);
-    addPredefinedLogFile(new PredefinedLogFile(IDEA_LOG, true));
+    addPredefinedLogFile(new PredefinedLogFile(LOG_FILE_NAME, true));
   }
 
-  @Nullable
   @Override
-  public LogFileOptions getOptionsForPredefinedLogFile(PredefinedLogFile predefinedLogFile) {
-    if (IDEA_LOG.equals(predefinedLogFile.getId())) {
+  public @Nullable LogFileOptions getOptionsForPredefinedLogFile(PredefinedLogFile predefinedLogFile) {
+    if (LOG_FILE_NAME.equals(predefinedLogFile.getId())) {
       final Module module = getModule();
       final Sdk ideaJdk = module != null ? IdeaJdk.findIdeaJdk(ModuleRootManager.getInstance(module).getSdk()) : null;
       if (ideaJdk != null) {
         final String sandboxHome = ((Sandbox)ideaJdk.getSdkAdditionalData()).getSandboxHome();
         if (sandboxHome != null) {
-          return new LogFileOptions(IDEA_LOG, sandboxHome + "/system/log/" + IDEA_LOG, predefinedLogFile.isEnabled());
+          return new LogFileOptions(LOG_FILE_NAME, sandboxHome + "/system/log/" + LOG_FILE_NAME, predefinedLogFile.isEnabled());
         }
       }
     }
     return super.getOptionsForPredefinedLogFile(predefinedLogFile);
   }
 
-  @NotNull
   @Override
-  public SettingsEditor<? extends RunConfiguration> getConfigurationEditor() {
+  public @NotNull SettingsEditor<? extends RunConfiguration> getConfigurationEditor() {
     SettingsEditorGroup<PluginRunConfiguration> group = new SettingsEditorGroup<>();
     group.addEditor(ExecutionBundle.message("run.configuration.configuration.tab.title"), new PluginRunConfigurationEditor(this));
     group.addEditor(ExecutionBundle.message("logs.tab.title"), new LogConfigurationPanel<>());
@@ -92,7 +92,7 @@ public class PluginRunConfiguration extends RunConfigurationBase<Element> implem
   }
 
   @Override
-  public RunProfileState getState(@NotNull final Executor executor, @NotNull final ExecutionEnvironment env) throws ExecutionException {
+  public RunProfileState getState(final @NotNull Executor executor, final @NotNull ExecutionEnvironment env) throws ExecutionException {
     final Module module = getModule();
     if (module == null) {
       throw new ExecutionException(DevKitBundle.message("run.configuration.no.module.specified"));
@@ -165,9 +165,9 @@ public class PluginRunConfiguration extends RunConfigurationBase<Element> implem
           }
         }
 
-        vm.defineProperty("idea.config.path", canonicalSandbox + File.separator + "config");
-        vm.defineProperty("idea.system.path", canonicalSandbox + File.separator + "system");
-        vm.defineProperty("idea.plugins.path", canonicalSandbox + File.separator + "plugins");
+        vm.defineProperty(PathManager.PROPERTY_CONFIG_PATH, canonicalSandbox + File.separator + "config");
+        vm.defineProperty(PathManager.PROPERTY_SYSTEM_PATH, canonicalSandbox + File.separator + "system");
+        vm.defineProperty(PathManager.PROPERTY_PLUGINS_PATH, canonicalSandbox + File.separator + "plugins");
         vm.defineProperty("idea.classpath.index.enabled", "false");
 
         if (!vm.hasProperty(JetBrainsProtocolHandler.REQUIRED_PLUGINS_KEY) && PluginModuleType.isOfType(module)) {
@@ -184,7 +184,8 @@ public class PluginRunConfiguration extends RunConfigurationBase<Element> implem
         }
 
         if (SystemInfo.isXWindow) {
-          if (VM_PARAMETERS == null || !VM_PARAMETERS.contains("-Dsun.awt.disablegrab")) {
+          if (VM_PARAMETERS == null || !VM_PARAMETERS.contains("-Dsun.awt.disablegrab")) // NON-NLS
+          {
             vm.defineProperty("sun.awt.disablegrab", "true"); // See http://devnet.jetbrains.net/docs/DOC-1142
           }
         }
@@ -211,9 +212,8 @@ public class PluginRunConfiguration extends RunConfigurationBase<Element> implem
           }
         }
         else {
-          for (String path : Arrays.asList(
-            "log4j.jar", "jdom.jar", "trove4j.jar", "openapi.jar", "util.jar",
-            "extensions.jar", "bootstrap.jar", "idea_rt.jar", "idea.jar")) {
+          for (String path : List.of("log4j.jar", "jdom.jar", "trove4j.jar", "openapi.jar", "util.jar", "bootstrap.jar",
+                                     "idea_rt.jar", "idea.jar")) {
             params.getClassPath().add(ideaJdkHome + toSystemDependentName("/lib/" + path));
           }
         }
@@ -295,14 +295,14 @@ public class PluginRunConfiguration extends RunConfigurationBase<Element> implem
     }
     super.readExternal(element);
     if (getPredefinedLogFiles().isEmpty() && getLogFiles().isEmpty()) {
-      addPredefinedLogFile(new PredefinedLogFile(IDEA_LOG, true));
+      addPredefinedLogFile(new PredefinedLogFile(LOG_FILE_NAME, true));
     }
   }
 
   @Override
   public void writeExternal(@NotNull Element element) throws WriteExternalException {
     Element moduleElement = new Element(MODULE);
-    moduleElement.setAttribute(NAME, ApplicationManager.getApplication().runReadAction(new Computable<String>() {
+    moduleElement.setAttribute(NAME, ApplicationManager.getApplication().runReadAction(new Computable<>() {
       @Override
       public String compute() {
         final Module module = getModule();
@@ -321,15 +321,13 @@ public class PluginRunConfiguration extends RunConfigurationBase<Element> implem
     super.writeExternal(element);
   }
 
-  @Nullable
-  public Module getModule() {
+  public @Nullable Module getModule() {
     if (myModule == null && myModuleName != null && !getProject().isDisposed()) {
       myModule = ModuleManager.getInstance(getProject()).findModuleByName(myModuleName);
     }
     if (myModule != null && myModule.isDisposed()) {
       myModule = null;
     }
-
     return myModule;
   }
 
@@ -337,8 +335,7 @@ public class PluginRunConfiguration extends RunConfigurationBase<Element> implem
     myModule = module;
   }
 
-  @Nullable
-  private static String getPluginId(Module plugin) {
+  private static @Nullable String getPluginId(Module plugin) {
     final XmlFile pluginXml = PluginModuleType.getPluginXml(plugin);
     if (pluginXml == null) return null;
 
